송금 하기 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,16 @@
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity android:name=".view.InputMoneyActivity"
+            android:windowSoftInputMode="adjustResize"/>
+
+        <activity android:name=".view.SelectReceiverActivity"/>
+
+        <activity android:name=".view.SendMoneyActivity"/>
+
+    </application>
 </manifest>
