--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jth.transfer">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".view.MainActivity">
             <intent-filter>
@@ -19,12 +20,25 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.InputMoneyActivity"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".view.InputMoneyActivity"
+            android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".view.SelectReceiverActivity"/>
+        <activity android:name=".view.SelectReceiverActivity" />
 
-        <activity android:name=".view.SendMoneyActivity"/>
+        <activity android:name=".view.SendMoneyActivity" />
 
+        <activity android:name=".view.TransferUrlSchemeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="transfer"
+                    android:scheme="test" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
